syntax = "proto3";

package test.wkt_map;

import "goplain/goplain.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/yaroher/protoc-gen-go-plain/tests/integrations/wkt_map;wkt_map";

message Address { string street = 1; }

message User {
  option (goplain.message).generate = true;

  // WKT
  google.protobuf.Any f_any = 1;
  google.protobuf.Duration f_duration = 2;
  google.protobuf.Empty f_empty = 3;
  google.protobuf.Struct f_struct = 4;
  google.protobuf.Timestamp f_ts = 5;
  google.protobuf.BoolValue f_bool = 6;
  google.protobuf.StringValue f_string = 7;

  // map
  map<string, int32> f_map_int32 = 8;
  map<string, Address> f_map_msg = 9;
}
